cmake_minimum_required(VERSION 3.17)
project(FEUP_PROG)

set(CMAKE_CXX_STANDARD 14)

include_directories(./*)

add_executable(FEUP_PROG
        ficha1/cap1/ex1.01.cpp
        ficha1/cap1/ex1.02.cpp
        ficha1/cap1/ex1.03.cpp
        ficha1/cap1/ex1.04.cpp
        ficha1/cap1/ex1.05.cpp
        ficha1/cap1/ex1.06.cpp
        ficha1/cap2/2.01.cpp
        ficha1/cap2/2.02.cpp
        ficha1/cap2/2.03.cpp
        ficha1/cap2/2.04.cpp
        ficha1/cap2/2.05.cpp
        ficha1/cap2/2.06.cpp
        ficha1/cap2/2.07a.cpp
        ficha1/cap2/2.07b.cpp
        ficha1/cap2/2.07c.cpp
        ficha1/cap2/2.07d.cpp
        ficha1/cap2/2.08a.cpp
        ficha1/cap2/2.08b.cpp
        ficha1/cap2/2.09a.cpp
        ficha1/cap2/2.10.cpp
        ficha1/cap2/2.11a.cpp
        ficha1/cap2/2.11b.cpp
        ficha1/cap2/2.11c.cpp
        ficha1/cap2/2.12a.cpp
        ficha1/cap2/2.12b.cpp
        ficha1/cap2/2.12c.cpp
        ficha1/cap2/2.13a.cpp
        ficha1/cap2/2.13b.cpp
        ficha1/cap2/2.13c.cpp
        ficha1/cap3/3.01.cpp
        ficha1/cap3/3.02a.cpp
        ficha1/cap3/3.02b.cpp
        ficha1/cap3/3.02c.cpp
        ficha1/cap3/3.02d.cpp
        ficha1/cap3/3.03a.cpp
        ficha1/cap3/3.03b.cpp
        ficha1/cap3/3.4.cpp
        ficha1/cap3/3.5.cpp
        ficha1/cap3/3.6.cpp
        ficha1/cap3/3.7.cpp
        ficha1/cap3/3.8.cpp)
